# Architect-Council

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  clean-build.bat  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  frontend.yml
backend/: __init__.py  auth.py  main.py
backend/agents/: __init__.py  da_chair.py  dx_analyst.py  enterprise_architect.py  security_analyst.py  standards_analyst.py
backend/api/: __init__.py  codebase_routes.py  governance_routes.py  query_routes.py  routes.py
backend/crews/: __init__.py  architecture_crew.py  codebase_crew.py
backend/governance/: __init__.py  formatter.py
backend/indexer/: __init__.py  chunker.py  dependency_parser.py  embedder.py  repo_cloner.py  structure_mapper.py
backend/schemas/: __init__.py  outputs.py
backend/tools/: __init__.py  api_endpoint_scanner_tool.py  compliance_check_tool.py  dependency_check_tool.py  file_reader_tool.py  import_graph_tool.py  pattern_library_tool.py  secret_scanner_tool.py  service_catalogue_tool.py  structure_analyser_tool.py  tech_radar_tool.py  test_coverage_tool.py  (+1 more)
data/: compliance_rules.json  dependencies.json  patterns.json  services.json  tech_radar.json  test_adrs.json
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
tests/: debug_perplexity.py  test_codebase_tools.py  test_indexer.py
(+43 files in other folders)
